--- a/number-of-parts.html
+++ b/number-of-parts.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css"/>
-    <script src="lib/d3/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="d3sparql.js"></script>
     <script>
     function exec() {
@@ -11,10 +11,11 @@
       var sparql = d3.select("#sparql").property("value")
       d3sparql.query(endpoint, sparql, render)
     }
+
     function render(json) {
       var config = {
-        "label": "pref",
-        "size": "area",
+        "label": "partLabel",
+        "size": "count",
         "width":  600,  // canvas width
         "height": 600,  // canvas height
         "margin":  10,  // canvas margin
@@ -30,6 +31,8 @@
     function toggle() {
       d3sparql.toggle()
     }
+
+    window.onload = exec
     </script>
     <style>
     .label {
@@ -38,31 +41,24 @@
     </style>
   </head>
   <body>
-    <div id="query" style="margin: 10px">
-      <h1>d3piechart</h1>
+    <div id="query" style="margin: 50px">
+      <h1>Number of Parts of the crime: </h1>
       <form class="form-inline">
         <label>SPARQL endpoint:</label>
         <div class="input-append">
-          <input id="endpoint" class="span5" value="http://dbpedia.org/sparql" type="text">
-          <button class="btn" type="button" onclick="exec()">Query</button>
-          <button class="btn" type="button" onclick="exec_offline()">Use cache</button>
-          <button class="btn" type="button" onclick="toggle()"><i id="button" class="icon-chevron-up"></i></button>
+          <input id="endpoint" class="span5" value="http://localhost:3030/crime/sparql" type="text">
         </div>
       </form>
       <textarea id="sparql" class="span9" rows=15>
-PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
-PREFIX yago: <http://dbpedia.org/class/yago/>
-PREFIX dbpedia-owl: <http://dbpedia.org/ontology/>
+        PREFIX : <http://crime-register/>
+        PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
+        PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
+        PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
+        SELECT (STR(?part) AS ?partLabel) (str(COUNT(?part)) AS ?count) WHERE {
+        ?s :Part_1-2 ?part
+        }
+        GROUP BY ?part
 
-SELECT ?pref ?area
-WHERE {
-  ?s a yago:WikicatPrefecturesOfJapan ;
-     rdfs:label ?pref ;
-     dbpedia-owl:areaTotal ?area_total .
-  FILTER (lang(?pref) = 'en')
-  BIND ((?area_total / 1000 / 1000) AS ?area)
-}
-ORDER BY DESC(?area)
       </textarea>
     </div>
     <div id="result"></div>
