--- a/status-of-crime.html
+++ b/status-of-crime.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css"/>
-    <script src="lib/d3/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="d3sparql.js"></script>
     <script>
     function exec() {
@@ -12,56 +12,56 @@
       d3sparql.query(endpoint, sparql, render)
     }
     function render(json) {
+      console.log(json)
       var config = {
-        // for d3sparql.tree()
-        "root": "root_name",
-        "parent": "parent_name",
-        "child": "child_name",
-        // for d3sparql.dendrogram()
-        "width": 900,
-        "height": 4500,
-        "margin": 350,
-        "radius": 5,
+        "label": "status",
+        "size": "count",
+        "width":  600,  // canvas width
+        "height": 600,  // canvas height
+        "margin":  10,  // canvas margin
+        "hole":   200,  // doughnut hole: 0 for pie, r > 0 for doughnut
         "selector": "#result"
       }
-      d3sparql.dendrogram(json, config)
+      d3sparql.piechart(json, config)
     }
 
     function exec_offline() {
-      d3.json("cache/taxonomy/tardigrada.json", render)
+      d3.json("cache/dbpedia/area-ja.json", render)
     }
     function toggle() {
       d3sparql.toggle()
     }
+    window.onload = exec
     </script>
+    <style>
+    .label {
+      font: 10px sans-serif;
+    }
+    </style>
   </head>
   <body>
-    <div id="query" style="margin: 10px">
-      <h1>d3dendrogram</h1>
+    <div id="query" style="margin: 50px">
+      <h1>Status of the crime: </h1>
       <form class="form-inline">
         <label>SPARQL endpoint:</label>
         <div class="input-append">
-          <input id="endpoint" class="span5" value="http://togostanza.org/sparql" type="text">
+          <input id="endpoint" class="span5" value="http://localhost:3030/crime/sparql" type="text">
           <button class="btn" type="button" onclick="exec()">Query</button>
           <button class="btn" type="button" onclick="exec_offline()">Use cache</button>
           <button class="btn" type="button" onclick="toggle()"><i id="button" class="icon-chevron-up"></i></button>
         </div>
       </form>
       <textarea id="sparql" class="span9" rows=15>
-PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
-PREFIX tax: <http://ddbj.nig.ac.jp/ontologies/taxonomy/>
+        PREFIX : <http://crime-register/>
+        PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
+        PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
+        PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
+        SELECT (?desc AS ?status) (str(COUNT(?desc)) AS ?count) WHERE {
+        ?s :Status ?stat .
+        ?stat :status_description ?desc
+        }
+        GROUP BY ?desc
 
-SELECT DISTINCT ?root_name ?parent_name ?child_name
-FROM <http://togogenome.org/graph/taxonomy>
-WHERE
-{
-  VALUES ?root_name { "Tardigrada" }
-  ?root tax:scientificName ?root_name .
-  ?child rdfs:subClassOf+ ?root .
-  ?child rdfs:subClassOf ?parent .
-  ?child tax:scientificName ?child_name .
-  ?parent tax:scientificName ?parent_name .
-}
       </textarea>
     </div>
     <div id="result"></div>
